# todo_test

./: .gitignore  README.md  docker-compose.yaml  package-lock.json
backend/: Dockerfile  database.py  main.py  pyproject.toml  settings.py
backend/alembic/: env.py
backend/alembic/versions/: 71cccea6c1f1_init.py
backend/api/: routers.py
backend/api/todo/: controller.py  models.py  router.py  schemas.py
backend/tests/: .env.test  test_todos.py
example/: env_backend_example
frontend/: Dockerfile  package-lock.json  package.json  webpack.config.js
frontend/src/: main.ts  todo.ts
frontend/src/resources/: api.ts  todo.css  todo.html  todo.ts
src/: app.html  main.ts  todo.html  todo.ts
